--- a/Android/vSpeedVario/app/build.gradle
+++ b/Android/vSpeedVario/app/build.gradle
@@ -33,6 +33,7 @@ repositories {
 }
 
 dependencies {
+    compile 'net.mabboud:android-tone-player:0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'no.nordicsemi.android:dfu:1.0.4'
     compile(group: 'org.eclipse.paho', name: 'org.eclipse.paho.android.service', version: '1.0.2') {
